tests/data/arff/invalid/nominal_attribute_with_wrong_name.arff
@RELATION  name

@ATTRIBUTE first    NUMERIC
@ATTRIBUTE second   numeric
@ATTRIBUTE foo    {0,1}

@DATA
-1.117827500607882,-2.9087188881250993,0
-0.5282118298909262,-0.335880984968183973,1
